<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tradepost</string>
    <string name="hello_world">Welcome to</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first_time">FirstTime</string>
    <string name="title_activity_sign_in_email">SignIn</string>
    <string name="app_id">766732026780315</string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_tool_bar">ToolBar</string>
    <string name="terms">By proceeding I agree to Trade Post \nterms and conditions </string>
    <string name="tour_text"><b><u>take a tour</u></b></string>
    <string name="message_hint">Say Something</string>
    <string name="send">Send</string>
    <string name="section1_text">Name Your Item</string>
    <string name="section2_text">Upload a Photo</string>
    <string name="section3_text">Item\'s Condition</string>
    <string name="section4_text">Give a Description</string>
    <string name="section5_text">Relevant TAGS</string>
    <string name="section6_text">Choose a Category</string>
    <string name="section2_text_camera">Take a photo\nwith your phone</string>
    <string name="section2_text_folder">Browse from\nyour folder</string>
    <string name="actionbar_single_listing"><b>MAKE AN OFFER</b></string>
    <string name="opendrawer">open</string>
    <string name="closedrawer">close</string>
    <string name="itemForTrade_empty">This User Does Not Have Any Item</string>
    <string name="chatpage_empty">You do not have an Offer</string>
    <string name="chatpage_empty_detail">please note that the chat is only available when you send or receive an offer from/to other users.</string>
    <string name="myItems_empty">You Do Not Have Any Item</string>
    <string name="myItems_empty_btn">Post New Item</string>
    <string name="myFav_empty">You Do Not Have Any Favorite Item</string>
    <string name="myFav_empty_btn">GO Back To MarketPlace</string>
    <string name="noti_empty">No New Notification :(</string>
    <string name="myoffers_received_empty">You Have Not Received Offer Yet</string>
    <string name="myoffers_sent_empty">You Have Not Sent Offer Yet</string>
    <string name="feedback_empty">No Feedback Yet :(</string>
    <string name="title_activity_search">Search</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_settings">Search</string>





    <string-array name="contries">
        <item>Select</item>
        <item>Montreal</item>
    </string-array>

    <string name="title_activity_main">Main</string>
    <string name="title_activity_picture_msg">PictureMsg</string>

    <string-array name="category_array">
        <item>Art</item>
        <item>Clothing</item>
        <item>Computers</item>
        <item>Electronics</item>
        <item>Home/Furniture</item>
        <item>Music Instruments</item>
        <item>Phones</item>
        <item>Sporting Goods</item>
        <item>Tickets</item>
        <item>Vehicles</item>
        <item>Video Games</item>
        <item>Misc</item>
    </string-array>

    <!-- LOCATION -->

    <string-array name="location_dialog">
        <item>Use Postal Code</item>
        <item>Use Location Service</item>
    </string-array>
    <string name="title_activity_added_files">Added_files</string>

    <string name="zip_postal_code">Use Postal Code</string>
    <string name="seekBar_first">"25km</string>
    <string name="seekBar_second">"50km</string>
    <string name="seekBar_third">"75km</string>
    <string name="seekBar_fourth">"100km</string>



        <string-array name="listArray">
            <item>Headings</item>
            <item>Headings and Details</item>
            <item>All Data</item>
        </string-array>
        <string-array name="listValues">
            <item>1</item>
            <item>2</item>
            <item>3</item>
        </string-array>
    <string name="title_activity_dele">Dele</string>



</resources>
